convert project to in-memory storage