@@ -1,34 +1,14 @@
 package com.lms.library.model;
 
-import jakarta.persistence.*;
-import lombok.*;
-
 import java.util.*;
 
-
-@Entity
-@Table(name = "members")
-@Getter
-@NoArgsConstructor(access = AccessLevel.PROTECTED)
-@AllArgsConstructor
 public class Member {
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    @Column(nullable = false)
-    private String firstName;
-
-    @Column(nullable = false)
-    private String lastName;
-
-    @Column(unique = true, nullable = false)
-    private String email;
-
-    @OneToMany(mappedBy = "member", cascade = CascadeType.ALL)
-    @ToString.Exclude
-    private List<Loan> loans = new ArrayList<>();
+    private final String firstName;
+    private final String lastName;
+    private final String email;
+    private final List<Loan> loans = new ArrayList<>();
 
     public Member(String firstName, String lastName, String email) {
         this.firstName = firstName;
@@ -36,9 +16,28 @@ public class Member {
         this.email = email;
     }
 
-    // Defensive copying for loans
+    public Long getId() {
+        return id;
+    }
+
+    public String getFirstName() {
+        return firstName;
+    }
+
+    public String getLastName() {
+        return lastName;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
     public List<Loan> getLoans() {
-        return Collections.unmodifiableList(new ArrayList<>(loans));
+        return List.copyOf(loans);
+    }
+
+    public void setId(Long id) {
+        this.id = id;
     }
 
     public void addLoan(Loan loan) {
